# connectivity_pkg

./: CMakeLists.txt  README.md  package.xml  setup.py
action/: Coordination_Destination.action
config/: auction_robot.rviz
launch/: connectivity_control.launch  connectivity_environment.launch  robot_load.launch  waypoint_send.launch
msg/: Waypoint_init.msg  array1d.msg
nodes/: connectivity_robot  tf_broadcastor  waypoint_send
report/: report.md
src/connectivity_pkg/: auction_robot_auctioneer.py  auction_robot_bidder.py  auction_robot_super.py  aux_function.py  network.py
srv/: ServiceAuctionResult.srv  ServiceRegistration.srv
worlds/: coordination_gazebo.world
