<?xml version="1.0"?>
<package format="2">
  <name>connectivity_pkg</name>
  <version>0.0.0</version>
  <description>The connectivity_pkg builds steiner tree with terminal nodes and connection nodes.
  Then assigned robots will go to those locations</description>

  <maintainer email="mingi.jeong.gr@dartmouth.edu">Mingi Jeong</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
